[Global search] Fix some layout issues

--- a/aleksis/core/static/style.scss
+++ b/aleksis/core/static/style.scss
@@ -189,6 +189,7 @@ a.collection-item.search-item {
 
 div#search-results {
   position: absolute;
+  margin-top: -10px;
   width: 100%;
 }
 
